Add new cli documentation (#576)
No changelog

--- a/docs/source/shared/_header.erb
+++ b/docs/source/shared/_header.erb
@@ -29,7 +29,7 @@
             <%= link_to 'Release Notes', '/release-notes.html', class: 'header__nav-item' %>
           </span>
           <span class='grid__cell 1/6--lap-and-up'>
-            <%= link_to 'CLI', '/cli.html', class: 'header__nav-item' %>
+            <%= link_to 'Commerce Cloud', '/commerce-cloud.html', class: 'header__nav-item' %>
           </span>
           <span class='grid__cell 1/6--lap-and-up'>
             <a href='https://demo.workarea.com/api/docs' target='_blank' class='header__nav-item'>
