--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -87,12 +87,12 @@
   </div>
   <div class='grid__cell 1/3--lap-and-up 1/5--desk'>
     <div class='align-center'>
-      <% link_to '/cli.html', class: 'box' do %>
+      <% link_to '/commerce-cloud.html', class: 'box' do %>
         <div class='box__header'>
-          <span class='box__heading'>CLI</span>
+          <span class='box__heading'>Commerce Cloud</span>
         </div>
         <p class='box__text'>
-          Make life easy with our command line interface!
+          Information about our hosted Commerce Cloud solution.
         </p>
       <% end %>
     </div>
