Fix locale display in admin
This API changed in the Rails 6 upgrade.

No changelog

--- a/admin/app/views/layouts/workarea/admin/application.html.haml
+++ b/admin/app/views/layouts/workarea/admin/application.html.haml
@@ -162,7 +162,7 @@
                       = avatar_for current_user, 'avatar--large'
                   .header__user-menu-cell
                     %span.heading.heading--5.heading--no-margin= Workarea.config.host
-                    %span.text.text--small= I18n.t(:name, I18n.locale)
+                    %span.text.text--small= t(:name)
               #user_menu.tooltip-content.tooltip-content--no-padding
                 %ul.menu
                   = append_partials('admin.user_menu')
